--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-2_SentenceBoundary_and_Deduplicate.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-2_SentenceBoundary_and_Deduplicate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acute-tunnel",
+   "id": "beneficial-angle",
    "metadata": {},
    "source": [
     "## Custom Data Cleaning\n",
@@ -10,16 +10,16 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "Big langauge model is sampling efficient, which implies that if the data fed to the model were full of misspelled words, vulgar by nature ( This is often the case with uncensored data extracted from webforums/chatrooms), contain large volume of other langauge than the target langauge, or having undesired and mischievous characteristic. We should definately consider creating a pipeline to clean and filter the data.\n",
+    "Big langauge model is sampling efficient, which implies that if the data fed to the model were full of misspelled words, vulgar by nature ( This is often the case with uncensored data extracted from web forums/chat rooms), contain large volume of other langauge than the target langauge, or were having undesired and mischievous characteristic. One should definately consider creating a pipeline to clean and filter the data.\n",
     "\n",
-    "Since Megatron-LM will sample sentences from documents during training run, we will also need to construct a mechanism to find sentence boundary per document.\n",
+    "Since Megatron-LM will sample sentences from documents during training run, we also need to construct a mechanism to find sentence boundary per document.\n",
     "\n",
-    "In this notebook, we are offering one way, there are many other ways, to deduplicate the data , on document level, based on a similarity threshold.Why ? Let's take newspaper for example, say, a catastrophic event such as tsunami occured in Thailand which claimed  many lives, such event could be reported repeatedly in a great many newws articles all over the world. Wouldn't we want to deduplicate the almost identical news articles, with a good similarity measuring mechanism ?\n",
+    "As is for data deduplication, we are offering one way, there are many other ways, to deduplicate the data on document level, base on a similarity threshold. Why is it important ? Let's take newspaper for example, imagine, a catastrophic event such as tsunami occured in Thailand which claimed  many lives, such event could be reported repeatedly in a great many news articles all over the world. Wouldn't we want to deduplicate the almost identical news articles, with a good similarity measuring mechanism ?\n",
     "\n",
-    "Similarily, when we blending datasets from a great number of sources in order to obtain big data in order to train big langauge model, we would want to have a way to deduplicate the repeated documents which are present in the collected datasets and keep only the ones we deem worthy.\n",
+    "Similarily, when we blend datasets from a variety of sources in order to obtain big data for training big langauge model, we would want to have a way to deduplicate the repeated documents which are present across the collected datasets.\n",
     "\n",
     "\n",
-    "Therefore, the goal of this lab is to provide some basic tools for cleaning and filtering data which should be carefully applied to custom langauge datasets, without losing the inherit charateristics in the datasets which you wish to preserve. \n",
+    "Therefore, the goal of this lab is to provide some basic tools for cleaning and filtering data which should be carefully applied to custom langauge datasets, and preserve the inherit charateristics in the datasets. \n",
     "\n",
     "In particular, this notebook covers the following steps :\n",
     "\n",
@@ -30,10 +30,10 @@
     "\n",
     "What this notebook will NOT cover :\n",
     "\n",
-    "    - Constructing black-list words to block and filter out inappropriate words.\n",
+    "    - Constructing a black-list to block and filter out inappropriate words/sentences/document.\n",
     "    - Clean empty lines or empty sentences.\n",
     "    - Spell-check words and punctuations.\n",
-    "    - Cut out sentence with too little tokens.\n",
+    "    - Remove sentences/documents with too few tokens.\n",
     "     and many more customized data cleaning methods which one should consider adding to the data cleaning pipelins.\n",
     "\n",
     "At the end, there will be a **mini challenge** for hands-on practicing identifying the numbers of duplicated documents as close as you can to the groudtruth number!"
@@ -41,10 +41,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-fleece",
+   "id": "successful-powder",
    "metadata": {},
    "source": [
     "---\n",
+    "We will start by installing all the python libraries we need.\n",
+    "\n",
     "In case you encounter problems of installing LSH, here is the fix :\n",
     "\n",
     "    Install LSH - \n",
@@ -70,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premium-judgment",
+   "id": "combined-ontario",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brazilian-trigger",
+   "id": "invalid-fifty",
    "metadata": {},
    "source": [
     "1. Langauge Detection  "
@@ -88,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worth-owner",
+   "id": "compatible-ordinance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appointed-catering",
+   "id": "eight-journal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decent-terrorism",
+   "id": "frequent-audit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,15 +123,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demonstrated-radiation",
+   "id": "secure-lithuania",
    "metadata": {},
    "source": [
-    "When we have a way to identify which langauge does this document belong to, we can then filter or remove the documents belong to undesired langauges and keep only the selected language(s)."
+    "Once we have a way to identify which langauge does this document belong to, we can then filter or remove the documents at will and keep only the selected language(s)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "periodic-balloon",
+   "id": "administrative-google",
    "metadata": {},
    "source": [
     "2. Find sentence boundaries - alternative 1 : NLTK"
@@ -138,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quality-pittsburgh",
+   "id": "closed-expression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +151,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "revolutionary-birmingham",
+   "id": "mighty-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize\n",
-    "text='Detta är ett stycke. Den innehåller flera meningar. \"Men varför\", frågar du? Andersson pekas ut som nästa partiledare: “Medlemmarna ska säga sitt”'\n",
+    "text='Detta är ett stycke. Den innehåller flera meningar. “Men varför”, frågar du? Andersson pekas ut som nästa partiledare: “Medlemmarna ska säga sitt”'\n",
     "print(\"original doc is :\\n \", text)\n",
     "sents=sent_tokenize(text)\n",
     "i=0\n",
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italic-bunch",
+   "id": "exposed-singapore",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -179,14 +181,14 @@
     "    ------- sentence 1 -------\n",
     "    Den innehåller flera meningar.\n",
     "    ------- sentence 2 -------\n",
-    "    \"Men varför\", frågar du?\n",
+    "    “Men varför”, frågar du?\n",
     "    ------- sentence 3 -------\n",
     "    Andersson pekas ut som nästa partiledare: “Medlemmarna ska säga sitt”"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "beneficial-parts",
+   "id": "healthy-gateway",
    "metadata": {},
    "source": [
     "2. Find sentence boundaries - alternative 2 : NLTK + custom function "
@@ -195,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "western-wings",
+   "id": "temporal-avenue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-survivor",
+   "id": "modified-comfort",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latin-sterling",
+   "id": "supported-poison",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -257,16 +259,22 @@
     "        ------- sentence 1 -------\n",
     "        Den innehåller flera meningar.\n",
     "        ------- sentence 2 -------\n",
-    "        \"Men varför\", frågar du?\n",
+    "        “Men varför”\n",
     "        ------- sentence 3 -------\n",
-    "        Andersson pekas ut som nästa partiledare:\n",
+    "        , frågar du?\n",
     "        ------- sentence 4 -------\n",
-    "        “Medlemmarna ska säga sitt”"
+    "        Andersson pekas ut som nästa partiledare:\n",
+    "        ------- sentence 5 -------\n",
+    "        “Medlemmarna ska säga sitt”\n",
+    "        \n",
+    "There are many ways to split the sentence within a document, the above is just one example.\n",
+    "\n",
+    "One can construct other custom function to do sentence splitting with or without NLTK. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "alternative-drill",
+   "id": "cosmetic-profession",
    "metadata": {},
    "source": [
     "3. Deduplicate documents based on similarity score.\n",
@@ -279,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-manitoba",
+   "id": "sustainable-proceeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-wells",
+   "id": "recreational-consumer",
    "metadata": {},
    "source": [
     "We want to verify how good this algorithm is, hence, we will create deduplcates documents from our toy data `extractedNVblogs.txt` obtained in webscaping lab. We will flag the duplicated documents, in the column `duplicate=True`, and this column will serve as the groundtruth for us, we will use this hand-crafted data to verify whether this algorithm will work as expected."
@@ -337,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-forest",
+   "id": "provincial-methodology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threatened-johnson",
+   "id": "numeric-gabriel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-coordination",
+   "id": "proprietary-survey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-review",
+   "id": "seven-insured",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -408,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daily-coast",
+   "id": "convinced-entry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decimal-guinea",
+   "id": "saved-assurance",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -431,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "differential-recovery",
+   "id": "bound-spouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broad-incidence",
+   "id": "ancient-witness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-reasoning",
+   "id": "announced-communication",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-dialogue",
+   "id": "monetary-outdoors",
    "metadata": {},
    "source": [
     "We could proceed to write the above dataframe to a csv file, however, for mini challenge, we would like to keep determinism. \n",
@@ -481,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prospective-murray",
+   "id": "combined-patch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,10 +500,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "several-wallpaper",
+   "id": "played-stream",
    "metadata": {},
    "source": [
-    "Below is the expected outputs , it should look exactly the same:\n",
+    "Below is the expected outputs , outputs should look exactly the same as below:\n",
     "\n",
     "        index \tdoc1 \tdoc2 \tduplicate\n",
     "        0 \t0 \tToday, NVIDIA announced new pretrained models ... \tAstrophysics researchers have long faced a tra... \tFalse\n",
@@ -508,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opened-bathroom",
+   "id": "micro-shuttle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,10 +526,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-handy",
+   "id": "simple-sender",
    "metadata": {},
    "source": [
-    "Below is the expected outputs , it should look exactly the same:\n",
+    "Below is the expected outputs , outputs should look exactly the same as below:\n",
     "\n",
     "            False    42\n",
     "            True     31\n",
@@ -531,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "productive-ideal",
+   "id": "explicit-swiss",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,17 +548,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-september",
+   "id": "authentic-runner",
    "metadata": {},
    "source": [
-    "Below is the expected outputs , it should look exactly the same:\n",
+    "Below is the expected outputs , outputs should look exactly the same as below:\n",
     "\n",
     "    73 groundtruth.txt\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "designing-rates",
+   "id": "permanent-mixer",
    "metadata": {},
    "source": [
     "## Mini-Challenge\n",
@@ -573,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "organizational-vulnerability",
+   "id": "searching-thompson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,14 +597,9 @@
     "    # reset file pointer and do LSH\n",
     "    fh.seek(0)\n",
     "    feed = itertools.islice(fh, 1000)\n",
-    "    \"\"\"\n",
+    "\n",
     "    ## modify the below numbers as input to function candidate_duplicates()\n",
-    "    char_ngram= < input_value >\n",
-    "    seeds=< input_value >\n",
-    "    bands=< input_value >\n",
-    "    hashbytes=< input_value >\n",
-    "    \"\"\"\n",
-    "    # initial value given below, please modify them accordingly to obtain count of number of duplicates  as close as 31 (=groundtruth)\n",
+    "    ## initial value given below, please modify them accordingly to obtain count of number of duplicates to be as close as 31 (= groundtruth)\n",
     "    char_ngram=13\n",
     "    seeds=100\n",
     "    bands=5\n",
@@ -604,7 +607,7 @@
     "    \n",
     "    candidates = candidate_duplicates(feed, char_ngram=char_ngram, seeds=seeds, bands=bands, hashbytes=hashbytes)\n",
     "\n",
-    "# go over all the generated candidates comparing their similarities\n",
+    "# go over all the candidates comparing their similarities\n",
     "similarities = []\n",
     "for ((line_a, docid_a), (line_b, docid_b)) in candidates:\n",
     "    doc_a, doc_b = lines[line_a], lines[line_b]\n",
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-recipe",
+   "id": "forward-analyst",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-behavior",
+   "id": "pleasant-cross",
    "metadata": {},
    "source": [
     "WOW that is way too LOW !!! We should have 31 duplicates as groundtruth."
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entire-brooks",
+   "id": "bacterial-slide",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -677,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-jackson",
+   "id": "according-scheduling",
    "metadata": {},
    "source": [
     "Go back and rerun cell <a href=\"./Lab2-2_SentenceBoundary_and_Deduplicate.ipynb#Rerun_Cell\">Jump to ReRun Cell</a>\n",
@@ -688,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prostate-latest",
+   "id": "coupled-crisis",
    "metadata": {
     "tags": []
    },
@@ -710,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "yellow-wallpaper",
+   "id": "civil-minority",
    "metadata": {
     "tags": []
    },
@@ -728,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "asian-picking",
+   "id": "necessary-mouth",
    "metadata": {
     "tags": []
    },
@@ -746,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-master",
+   "id": "regulated-bankruptcy",
    "metadata": {},
    "source": [
     "--- \n",
@@ -756,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acquired-browser",
+   "id": "altered-producer",
    "metadata": {},
    "source": [
     "-----\n",
@@ -765,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "running-engineering",
+   "id": "desperate-scoop",
    "metadata": {},
    "source": [
     "-----\n",
